BAEL-4457 use default target release