@@ -31,7 +31,7 @@ class UserControllerUnitTest {
     @Test
     void whenGetAllUsers_thenOK() {
         // Given
-        List<User> users = List.of(
+        List<User> users = Arrays.asList(
                 new User(1, "user1", new ArrayList<Address>(
                         Arrays.asList(
                                 new Address("address1_addressLine1", "address1_addressLine2", "address1_town", "address1_postCode"),
